--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sayı Bulmaca Oyunu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -63,5 +63,6 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
 </body>
+
 
 </html>
